# blog-system

./: Cargo.toml  README.md
.cargo/: config
migrations/2020-06-09-093225_create_posts/: up.sql
migrations/2020-06-09-094954_create_page/: up.sql
migrations/2020-06-09-095237_create_comments/: up.sql
migrations/2020-06-10-080450_post_tsvector/: down.sql  up.sql
migrations/2020-06-13-153210_rename_ts_trigger/: down.sql  up.sql
migrations/2020-06-13-155214_case_insensitive/: down.sql  up.sql
migrations/2020-06-14-073118_constraint-title/: down.sql  up.sql
migrations/2020-06-21-013317_add_pubdate/: down.sql  up.sql
migrations/2020-06-22-030437_add_page_description/: down.sql  up.sql
src/: api.rs  cli.rs  crypto.rs  main.rs  model.rs  schema.rs  server.rs  template.rs  utils.rs
src/cli/: client.rs  server.rs
static/css/: 404.css  error.css  main.css
static/js/: error.js  main.js
templates/: 404.html  base.html  error.html  index.html  page.html  post.html  posts.html  remove_comment.html  search.html  tag.html  tags.html
