[package]
name = "utopia"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
structopt = "0.2"
ammonia = "3.1.0"
r2d2_postgres = "0.16.0"
pulldown-cmark = {version = "0.7", features = ["default", "simd"]}
tide = { version = "0.10", features = ["unstable"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
postgres = "0.17"
http-types = "2"
tempfile = "3.1.0"
diesel = { version = "1.4.5", features = ["default", "postgres", "extras", "unstable"]}
pretty_env_logger = "0.4.0"
log = "0.4"
askama = "0.9.0"
snmalloc-rs = { version = "0.2.15", features = ["native-cpu", "cache-friendly"] }
async-std = { version = "1.6", features = ["attributes", "unstable", "std"] }
async-trait = "*"
botan = "*"
regex = "*"
simd-json = {  version = "0.3.9", features = ["128bit", "swar-number-parsing", "serde_impl"] }
radix64 = "0.6.2"
rand = "*"
xactor = "*"
ahash = { version = "0.3", features = ["compile-time-rng", "std"] }
dotenv = "0.15"
easy-hasher = "2.1.1"
hashbrown = "*"
rpassword = "*"
rss =  { version = "1.9", features = ["builders", "serde"] }
surf = "2.0.0-alpha.4"
prettytable-rs = "0.8"
serde_json = "*"
percent-encoding ="2"
atom_syndication = { version  = "0.9", features = ["with-serde"] }
diesel_full_text_search = { git = "https://github.com/SchrodingerZhu/diesel_full_text_search" }

[profile.release]
opt-level = 3
lto = "fat"

