[package]
name = "utopia"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"
homepage = "https://zhuyi.fan"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
structopt = "0.2"
ammonia = "3"
r2d2_postgres = "0.16"
pulldown-cmark = {version = "0.7", features = ["default", "simd"]}
tide = { version = "0.10", features = ["unstable"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
postgres = "0.17"
http-types = "2"
tempfile = "3.1"
diesel = { version = "1.4", features = ["default", "postgres", "extras", "unstable"]}
pretty_env_logger = "0.4"
log = "0.4"
askama = "0.9"
snmalloc-rs = { version = "0.2", features = ["native-cpu", "cache-friendly"] }
async-std = { version = "1.6", features = ["attributes", "unstable", "std"] }
async-trait = "0.1"
botan = "0.6"
regex = "1"
simd-json = {  version = "0.3", features = ["128bit", "swar-number-parsing", "serde_impl"] }
radix64 = "0.6"
rand = "0.7"
xactor = "0.7"
ahash = { version = "0.3", features = ["compile-time-rng", "std"] }
dotenv = "0.15"
easy-hasher = "2.1"
hashbrown = "0.7"
rpassword = "4"
rss =  { version = "1.9", features = ["builders", "serde"] }
surf = "2.0.0-alpha.4"
prettytable-rs = "0.8"
serde_json = "1"
percent-encoding ="2"
atom_syndication = { version  = "0.9", features = ["with-serde"] }
diesel_full_text_search = { git = "https://github.com/SchrodingerZhu/diesel_full_text_search" }

[profile.release]
opt-level = 3
lto = "thin"

